--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/*******
+ Header
+ *******/
+
+ #site_header {
+     background-color: antiquewhite;
+     height: 150px;
+     line-height: 150px;
+     border: 2px dashed crimson;
+ }
+
+ #site_header > h1 {
+     color: crimson;
+     text-decoration: underline;
+     font-size: 50px;
+     font-family: monospace;
+     text-align: center;
+ }
+
+ /*******
+ Main
+ *******/
+
+ /*******
+ Footer
+ *******/
